--- a/SymmetryGIS/RibbonUI.rc
+++ b/SymmetryGIS/RibbonUI.rc
@@ -12,7 +12,7 @@ END
 
 STRINGTABLE 
 BEGIN
-    cmdTab_Tab_LabelTitle_RESID L"Tab" /* LabelTitle cmdTab_Tab_LabelTitle_RESID: (null) */
+    cmdTab_Symmetry_LabelTitle_RESID L"Symmetry" /* LabelTitle cmdTab_Symmetry_LabelTitle_RESID: (null) */
 END
 
 STRINGTABLE 
@@ -28,6 +28,16 @@ END
 STRINGTABLE 
 BEGIN
     cmdGroup_Show_LabelTitle_RESID L"Show" /* LabelTitle cmdGroup_Show_LabelTitle_RESID: (null) */
+END
+
+STRINGTABLE 
+BEGIN
+    cmdGroup_Gemma_LabelTitle_RESID L"Gemma" /* LabelTitle cmdGroup_Gemma_LabelTitle_RESID: (null) */
+END
+
+STRINGTABLE 
+BEGIN
+    cmdGroup_Other_LabelTitle_RESID L"Other" /* LabelTitle cmdGroup_Other_LabelTitle_RESID: (null) */
 END
 
 STRINGTABLE 
@@ -72,4 +82,16 @@ BEGIN
     ID_SHOW_LIDAR_LabelTitle_RESID L"LiDAR" /* LabelTitle ID_SHOW_LIDAR_LabelTitle_RESID: (null) */
 END
 
+STRINGTABLE 
+BEGIN
+    ID_SYMMETRY_OTHER_LabelTitle_RESID L"Symmetry" /* LabelTitle ID_SYMMETRY_OTHER_LabelTitle_RESID: (null) */
+END
+
+ID_SYMMETRY_OTHER_LargeImages_RESID    IMAGE    "UI\\settings.png" /* LargeImages ID_SYMMETRY_OTHER_LargeImages_RESID: (null) */
+STRINGTABLE 
+BEGIN
+    ID_SYMMETRY_GEMMA_LabelTitle_RESID L"Symmetry" /* LabelTitle ID_SYMMETRY_GEMMA_LabelTitle_RESID: (null) */
+END
+
+ID_SYMMETRY_GEMMA_LargeImages_RESID    IMAGE    "UI\\settings.png" /* LargeImages ID_SYMMETRY_GEMMA_LargeImages_RESID: (null) */
 APPLICATION_RIBBON    UIFILE    "RibbonUI.bml"
