WIP: Extracting building Lidar points from LAS file

--- a/SymmetryGIS/SymmetryGIS.vcxproj.filters
+++ b/SymmetryGIS/SymmetryGIS.vcxproj.filters
@@ -9,6 +9,9 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
+    <Filter Include="SymLib">
+      <UniqueIdentifier>{18ed4f64-3195-44a3-9785-0dd46bd895df}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
