--- a/SymmetryGIS/SymmetryGIS.vcxproj
+++ b/SymmetryGIS/SymmetryGIS.vcxproj
@@ -198,6 +198,7 @@ set /a 0</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="SymLib\symetry3d.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
@@ -206,6 +207,7 @@ set /a 0</Command>
     <ClInclude Include="GemmaFusion.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RibbonUI.h" />
+    <ClInclude Include="SymLib\symetry3d.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="RibbonUI.xml">
